k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-api-service
spec:
  type: ClusterIP
  selector:
    app: status-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
